unit test ve command tamamlandı :monocle_face:
